# Case-Gerenciamento-de-Contratos-de-Credito-Pessoal-API

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt
GCCP_API/: manage.py
GCCP_API/gccp_api_rest/: apps.py  helpers.py  models.py  serializers.py  tests.py  views.py
GCCP_API/gccp_api_rest/migrations/: 0001_initial.py
GCCP_API/gccp_api_root/: settings.py  urls.py
gccp_api_rest/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
gccp_api_rest/migrations/: 0001_initial.py
gccp_api_root/: asgi.py  settings.py  urls.py  wsgi.py
